--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,19 @@
 sudo: false
 language: python
-python:
-  - 2.7
-  - 3.4
-  - 3.5
 
-env:
-  - DJANGO_VERSION=1.8.9
-  - DJANGO_VERSION=1.9.2
+matrix:
+  include:
+    - python: "2.7"
+      env: DJANGO_VERSION="Django>=1.11,<2.0"
+    - python: "3.4"
+      env: DJANGO_VERSION="Django>=2.0,<2.1"
+    - python: "3.5"
+      env: DJANGO_VERSION="Django>=2.0,<2.1"
+    - python: "3.6"
+      env: DJANGO_VERSION="Django>=2.0,<2.1"
 
 install:
-  - pip install -q Django==$DJANGO_VERSION
+  - pip install -q --upgrade $DJANGO_VERSION
   - pip install coveralls
 
 script:
